Improved pop-up for medium devices & fixed  white space

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -103,7 +103,15 @@ body {
   cursor: pointer;
   border-radius: 50%;
   border: none;
-  background: var(--light-grayish-blue);
+  padding: 0;
+  max-height: 30px;
+  min-height: 30px;
+  max-width: 30px;
+  min-width: 30px;
+  svg {
+    width: 15px;
+    height: 13px;
+  }
 }
 
 .share-button:hover {
@@ -111,6 +119,7 @@ body {
 }
 
 .media-icon {
+  display: inline-block;
   img {
     transition: all 0.5s;
   }
@@ -121,16 +130,17 @@ body {
 
 //=============mixins
 
-@mixin flex-wrap {
+@mixin flex-wrap($direction: row, $justify: unset, $align: unset) {
   display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+  flex-direction: $direction;
+  justify-content: $justify;
+  align-items: $align;
   width: 100%;
 }
 
 //=============CONTAINERS
 .container {
-  @include flex-wrap;
+  @include flex-wrap(column, space-between, unset);
   height: 100vh;
   padding: 10vh 24px 0;
   margin-left: auto;
@@ -145,14 +155,14 @@ body {
 @media (min-width: 824px) {
   .container {
     max-width: 840px;
-    padding: 50vh 24px 0;
+    padding: 0 24px;
   }
 }
 
 //=============mobile styles
 
 .card {
-  @include flex-wrap;
+  @include flex-wrap(column, space-between, unset);
   background: white;
   min-height: 460px;
   height: auto;
@@ -167,11 +177,11 @@ body {
   }
 
   .grid-right {
-    @include flex-wrap;
+    @include flex-wrap(column, space-between, unset);
   }
 
   .info {
-    padding: 2rem 2rem 0;
+    padding: 2.5rem 2.25rem 1.25rem;
     h2 {
       margin-top: 0;
     }
@@ -180,15 +190,13 @@ body {
     }
   }
   .card-footer {
-    @include flex-wrap;
-    flex-direction: row;
+    @include flex-wrap(row, space-between, center);
     padding: 0 2rem;
-    align-items: center;
     height: 80px;
     position: relative;
+    border-bottom-right-radius: 10px;
     .person {
-      display: flex;
-      align-items: center;
+      @include flex-wrap(row, unset, center);
       img {
         max-width: 40px;
         border-radius: 50%;
@@ -196,17 +204,14 @@ body {
       }
     }
     .share-button {
-      width: 32px;
-      height: 32px;
-      svg {
-        width: 15px;
-        height: 13px;
-      }
+      background: var(--light-grayish-blue);
+      margin-top: 7px;
       .share-icons {
         display: none;
       }
     }
   }
+
   .card-footer.active {
     background: var(--very-dark-grayish-blue);
     .share-button {
@@ -224,9 +229,6 @@ body {
       justify-content: space-around;
       align-items: center;
       transform: translateY(-50%);
-      .media-icon {
-        display: inline-block;
-      }
     }
   }
 }
@@ -244,6 +246,8 @@ a {
 
 @media screen and (min-width: 824px) {
   .card {
+    position: relative;
+    top: 50%;
     min-height: 300px;
     transform: translateY(-50%);
     display: grid;
@@ -254,22 +258,11 @@ a {
     }
 
     .info {
-      padding: 3rem 3rem 0 3rem;
+      padding: 3rem 3rem 1.5rem;
     }
     .card-footer {
       padding: 0 3rem;
-    }
-  }
-}
-
-//==============desktop styles
-
-@media screen and (min-width: 1200px) {
-  .card {
-    overflow: visible;
-    .drawer {
-      border-top-left-radius: 10px;
-      border-bottom-left-radius: 10px;
+      align-items: flex-start;
     }
     .card-footer.active {
       background: white;
@@ -285,16 +278,39 @@ a {
         background: var(--very-dark-grayish-blue);
         width: 300px;
         height: auto;
-        top: -100px;
-        left: 10px;
-        transform: translateX(-50%);
+        top: -80px;
+        left: -225px;
       }
       .share-icons::after {
         content: "";
         position: absolute;
-        left: 50%;
+        left: 75%;
         transform: translateX(-50%);
         top: 95%;
+        border-right: 1.5rem solid var(--very-dark-grayish-blue);
+        border-bottom: 1rem solid transparent;
+        transition: left 1s;
+      }
+    }
+  }
+}
+
+//==============desktop styles
+
+@media screen and (min-width: 1200px) {
+  .card {
+    overflow: visible;
+    .drawer {
+      border-top-left-radius: 10px;
+      border-bottom-left-radius: 10px;
+    }
+    .card-footer.active {
+      .share-icons {
+        left: -135px;
+      }
+      .share-icons::after {
+        left: 50%;
+        transform: translateX(-50%);
         border-top: 1rem solid var(--very-dark-grayish-blue);
         border-right: 1rem solid transparent;
         border-left: 1rem solid transparent;
